# python-project-template

./: .gitignore  .pylintrc  README.rst  log.txt  pyproject.toml  tox.ini
.chglog/: config.yml
.github/workflows/: ci.yml  create-release.yml
docs/: Makefile
docs/source/: app.rst  conf.py  contributing.rst  index.rst  modules.rst
scripts/: rename.sh
src/app/: __init__.py  __main__.py  hello.py
tests/: conftest.py
