
[tool.poetry]
name = "app"
version = "0.0.1"
description = "App"
authors = ["Max Hösel <musicbird@maxhoesel.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "app", from = "src" },
]
keywords = ["app", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.urls]
"Repository" = "https://github.com/maxhoesel/app"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = {version = "^4.3.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}

[tool.poetry.dev-dependencies]
gitlint = "^0.17.0"
pylint = "^2.12.2"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^3.2.0"}
pre-commit = "^2.16.0"
autopep8 = "^1.6.0"

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
]

[tool.poetry.scripts]
app = 'app.__main__:entrypoint'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts="-nauto --basetemp=.pytest_tmp --cov=app --cov-report=html --cov-report=term --cov-report=xml"

[tool.autopep8]
max_line_length = 100

# Pylint settings
[tool.pylint.'NESSAGES CONTROL']
disable=[
    "logging-fstring-interpolation", # See https://github.com/PyCQA/pylint/issues/2354
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring", # also triggers on abstract functions
    "consider-using-enumerate", # not for simple loops
    "consider-using-dict-items",
    "no-else-return",
    "invalid-name",
    "too-many-boolean-expressions",
    "too-few-public-methods",
    "I"
]
[tool.pylint.'FORMAT']
max-line-length=100
